# postgres-ha-cluster

./: LICENSE  README.md
benchmark/: compose.sharding.yml  compose.yml
benchmark/dashboards/: pgbench-ha-sharding.json  pgbench-ha-smr.json
benchmark/provisioning/dashboards/: pgbench-dashboards.yml
benchmark/provisioning/datasources/: pgbench-prometheus.yml
pgload/: Dockerfile  README.md  pyproject.toml  run.sh
pgload/pgload/: cli.py  metrics.py
pgload/pgload/commands/: benchmark.py  generate.py  health.py  initialize.py
pgload/pgload/sql/: __init__.py  callables.py  models.py  queries.py  query.py  utils.py  worker.py
pgload/pgload/sql/queries/common/: callables.py  queries.py
pgload/pgload/sql/queries/sharding/: __init__.py  callables.py  queries.py
pgload/pgload/sql/queries/smr/: __init__.py  callables.py  queries.py
pgload/pgload/sql/sharding/: __init__.py  callables.py  queries.py
pgload/pgload/sql/smr/: __init__.py  callables.py  queries.py
postgres-ha-sharding/: Dockerfile  README.md  compose.limits.yml  compose.yml  entrypoint.sh  haproxy.cfg  run.sh
postgres-ha-sharding/init-scripts/: 00-init-db.sql  01-set-schema.sql
postgres-ha-smr/: README.md  compose.sync.yml  compose.yml
postgres-ha-smr/init-scripts/database/: 00-init-db.sql  01-set-schema.sh
postgres-ha-smr/patroni/: Dockerfile  compose.benchmark.yml  compose.limits.yml  compose.yml  entrypoint.sh  grafana-datasources.yml  haproxy.cfg  prometheus.yml  run.sh
postgres-ha-smr/repmgr/: compose.benchmark.yml  compose.sync.yml  compose.yml
(+1 files in other folders)
